# peakpredict

./: .gitignore  .secrets.example  Individual Athlete Data - Web Scraper.ipynb  README.md  Sports data  - Web Scraping.ipynb  pyproject.toml
.streamlit/: config.toml
analysis/: holdout_validation.py  rnn_confirm.py  rnn_experiment.py  rnn_optimizer.py  rnn_sweep.py  synthetic_validation.py
docs/: architecture.md  dashboard.md  data-pipeline.md  make_figures.py  modeling.md  results.md
docs/images/: SCREENSHOTS.md
specs/peak-performance-predictor/: business-requirements.md  design.md  feasibility-spike.md  implementation-plan.md  manual-test-plan.md  ml-modeling-spec.md  srs.md  user-journeys.md
sports_data_platform/: .gitignore  README.md  main.py  requirements.txt  setup.py
sports_data_platform/config/: credentials.py  settings.py
sports_data_platform/core/: base_scraper.py  session_manager.py
sports_data_platform/pipeline/: orchestrator.py
sports_data_platform/scrapers/: athlete_scraper.py  event_scraper.py  performance_scraper.py
sports_data_platform/storage/: database.py  database_manager.py
sports_data_platform/utils/: concurrency.py  error_handlers.py  logging_utils.py
src/peakpredict/: __init__.py
tests/: test_career_parser.py  test_config.py  test_dashboard.py  test_e2e.py  test_enrich.py  test_event_maps.py  test_io.py  test_labels_features.py  test_model_eval.py  test_normalization.py  test_publish.py  test_rnn.py  test_roster_parser.py  test_runner.py  test_schemas.py  test_season_best.py  test_trajectory.py
(+39 files in other folders)
